build_test.txt
warning: unused variable: `selector`
  --> src\tools\fetch.rs:39:13
   |
39 | ...et selector = ...
   |       ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_selector`
   |
   = note: `#[warn(unused_variables)]` on by default

warning: unused import: `std::os::windows::process::CommandExt`
  --> src\tools\process.rs:59:13
   |
59 | ...se std::o...dExt;
   |       ^^^^^^...^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

warning: `flowbot-rs` (lib) generated 2 warnings
   Compiling flowbot-rs v0.1.0 (C:\Users\AMAN ANU\Desktop\amxcodes\nanobot\nanobot-rs-clean)
error[E0432]: unresolved import `flowbot_rs::persistence`
 --> examples\test_features.rs:3:17
  |
3 | use flowbot_rs::persistence::PersistenceManager;
  |                 ^^^^^^^^^^^ could not find `persistence` in `flowbot_rs`

warning: unused import: `flowbot_rs::tools::definitions::get_tool_declarations`
 --> examples\test_features.rs:1:5
  |
1 | use flowbot_rs::tools::definitions::get_tool_declarations;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

For more information about this error, try `rustc --explain E0432`.
warning: `flowbot-rs` (example "test_features") generated 1 warning
error: could not compile `flowbot-rs` (example "test_features") due to 1 previous error; 1 warning emitted
